--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,9 +8,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="<%= APP_BASE %>assets/favicon/favicon-<%= ENV_CONFIG.ENV %>.ico" type="image/x-icon">
-  <link rel="../../node_modules/primeng/resources/primeng.css">
+  <!--<link rel="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="../../node_modules/primeng/resources/themes/omega/theme.css">
-    <link rel="../../node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="../../node_modules/font-awesome/css/font-awesome.min.css">-->
   <!-- inject:css -->
   <!-- endinject -->
 </head>
